--- a/pydy_viz/static/index.html
+++ b/pydy_viz/static/index.html
@@ -9,14 +9,8 @@
 		<script src="js/lib/three.min.js"></script>
 		<script src="js/lib/TrackballControls.js"></script>
         <script src="data.json"></script>
-        <script src="js/canvas/initialize.js"></script>
-        <script src="js/canvas/addObjects.js"></script>
-        <script src="js/canvas/animate.js"></script>                
+        <script src="js/bin/canvas.min.js"></script>
         <link rel="stylesheet" type="text/css" href="css/style.css">
-		<script type="text/javascript">
-		var alert1 = function () { alert("1"); }
-        $( "#slider" ).slider();
-	</script>	      
 	</head>
 
 	<body>
